<resources>
    <string name="app_name">AndroidEatit</string>
    <string name="slogan">No matter where you are:Whether you are at home, at office,or on the beach! we will find you and will feed you.</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOG IN</string>
    <string name="_0712545288">0712545288</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="logout">LogOut</string>
    <string name="sign_out">Sign Out</string>
    <string name="name_of_the_menu">Name of The Menu</string>
</resources>
