<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
        android:id="@+id/_nav_menu"
        android:icon="@drawable/ic_restaurant_black_24dp"
        android:iconTint="@android:color/white"
        android:title="@string/menu_home" />

        <item
            android:id="@+id/_nav_cart"
            android:icon="@drawable/ic_local_grocery_store_black_24dp"
            android:iconTint="@android:color/white"
            android:title="@string/cart" />

        <item
            android:id="@+id/_nav_order"
            android:icon="@drawable/ic_watch_later_black_24dp"
            android:iconTint="@android:color/white"
            android:title="@string/orders" />
        <item
            android:id="@+id/_nav_logout"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:iconTint="@android:color/white"
            android:title="@string/sign_out" />

    </group>
</menu>
