<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        
        <ImageView

            android:src="@drawable/logo"
            android:layout_width="200dp"
            android:layout_height="200dp">
        </ImageView>

        <TextView
            android:id="@+id/textSlogan"
            android:layout_width="211dp"
            android:layout_height="81dp"
            android:gravity="center"
            android:text="@string/slogan"
            android:textColor="@android:color/white">

        </TextView>
    </LinearLayout>


    <Button
        android:id="@+id/log_in"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="77dp"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="574dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="49dp"
        android:layout_marginBottom="122dp"
        android:background="@color/btnLogIn"
        android:text="@string/log_in"
        android:textColor="@android:color/white"
        android:visibility="visible">

    </Button>

    <Button
        android:id="@+id/sign_up"
        android:layout_width="118dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="57dp"
        android:layout_marginLeft="57dp"
        android:layout_marginTop="571dp"
        android:layout_marginEnd="224dp"
        android:layout_marginRight="224dp"
        android:layout_marginBottom="122dp"
        android:background="@color/btnSignUp"
        android:text="@string/sign_up"
        android:textColor="@android:color/white" />


</RelativeLayout>